Add `generate` crate to parse raw emojis
This commit adds a new `generate` crate that fetches the raw emoji data
from https://unicode.org and parses them into a data structure.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ readme = "README.md"
 license = "MIT OR Apache-2.0"
 
 # See more at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[workspace]
+members = ["generate"]
