--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,14 @@ license = "MIT OR Apache-2.0"
 
 # See more at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[dependencies]
+fuzzy-matcher = { version = "0.3.7", optional = true }
+itertools = { version = "0.10.0", optional = true }
+
+[features]
+std = []
+default = ["search"]
+search = ["std", "fuzzy-matcher", "itertools"]
+
 [workspace]
 members = ["generate"]
