--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "emojis"
 version = "0.0.0"
 authors = ["Ross MacArthur <ross@macarthur.io>"]
 edition = "2018"
+description = "Lookup, iterate, and search emojis."
 readme = "README.md"
 license = "MIT OR Apache-2.0"
 
