--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,10 @@ authors = ["Ross MacArthur <ross@macarthur.io>"]
 edition = "2018"
 description = "Lookup, iterate, and search emojis."
 readme = "README.md"
+repository = "https://github.com/rossmacarthur/emojis"
 license = "MIT OR Apache-2.0"
+keywords = ["emoji", "search", "unicode"]
+categories = ["text-processing"]
 
 # See more at https://doc.rust-lang.org/cargo/reference/manifest.html
 
