--- a/generate/Cargo.toml
+++ b/generate/Cargo.toml
@@ -14,3 +14,5 @@ curl = "0.4.34"
 heck = "0.3.2"
 indexmap = "1.6.1"
 itertools = "0.10.0"
+serde = { version = "1.0.124", features = ["derive"] }
+serde_json = "1.0.64"
