--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "emojis"
 version = "0.1.1"
 authors = ["Ross MacArthur <ross@macarthur.io>"]
 edition = "2018"
-description = "Lookup, iterate over, and fuzzy search for emojis."
+description = "✨ Lookup, iterate over, and fuzzy search for emojis."
 readme = "README.md"
 repository = "https://github.com/rossmacarthur/emojis"
 license = "MIT OR Apache-2.0"
