--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,6 +31,9 @@ jobs:
     - name: Test
       run: cargo test --workspace
 
+    - name: Test (no_std)
+      run: cargo test --workspace --no-default-features --lib
+
   publish:
     needs: build
     if: startsWith(github.ref, 'refs/tags/')
