--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -34,6 +34,17 @@ jobs:
     - name: Test (no_std)
       run: cargo test --workspace --no-default-features --lib
 
+  generated:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Check generated code is up to date
+      run: |
+        cargo run --package generate
+        git diff --exit-code -- src/generate.rs
+
   publish:
     needs: build
     if: startsWith(github.ref, 'refs/tags/')
