--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "emojis"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["Ross MacArthur <ross@macarthur.io>"]
 edition = "2018"
 description = "✨ Lookup, iterate over, and fuzzy search for emojis."
@@ -8,7 +8,7 @@ readme = "README.md"
 repository = "https://github.com/rossmacarthur/emojis"
 license = "MIT OR Apache-2.0"
 keywords = ["emoji", "search", "unicode"]
-categories = ["text-processing"]
+categories = ["text-processing", "no-std"]
 
 [dependencies]
 strsim = { version = "0.10.0", optional = true }
