--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ categories = ["text-processing", "no-std"]
 
 [workspace]
 members = ["generate"]
+
+[dependencies]
+phf = { version = "0.11.1", default-features = false }
