--- a/generate/Cargo.toml
+++ b/generate/Cargo.toml
@@ -11,5 +11,6 @@ anyhow = "1.0.38"
 curl = "0.4.34"
 heck = "0.3.2"
 indexmap = "1.6.1"
+phf_codegen = "0.11.1"
 serde = { version = "1.0.124", features = ["derive"] }
 serde_json = "1.0.64"
