--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "emojis"
 version = "0.5.0"
 authors = ["Ross MacArthur <ross@macarthur.io>"]
 edition = "2018"
-description = "✨ Lookup and iterate over emoji names, shortcodes, and groups."
+description = "✨ Lookup and iterate over emoji names, shortcodes, and groups"
 readme = "README.md"
 repository = "https://github.com/rossmacarthur/emojis"
 license = "MIT OR Apache-2.0"
