--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,8 @@
 name = "emojis"
 version = "0.5.1"
 authors = ["Ross MacArthur <ross@macarthur.io>"]
-edition = "2018"
+edition = "2021"
+rust-version = "1.60"
 description = "✨ Lookup and iterate over emoji names, shortcodes, and groups"
 readme = "README.md"
 repository = "https://github.com/rossmacarthur/emojis"
