--- a/generate/Cargo.toml
+++ b/generate/Cargo.toml
@@ -14,3 +14,4 @@ indexmap = "1.6.1"
 phf_codegen = "0.11.1"
 serde = { version = "1.0.124", features = ["derive"] }
 serde_json = "1.0.64"
+then = "0.1.0"
